<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="640"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/LA_toolbar_TB"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:background="@drawable/save_us_main" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="18dp"
                android:background="@drawable/profile_icon" />


        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/appColor"
        android:layout_weight="104">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:layout_centerInParent="true"
            android:textSize="22sp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/assistant_regular"/>

    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_weight="476">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_weight="106">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_health"
                android:textSize="16sp"
                android:textColor="@color/loginColor"
                android:fontFamily="@font/assistant_regular"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_the"
                android:textSize="16sp"
                android:textColor="@color/loginColor"
                android:fontFamily="@font/assistant_bold"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="360"
            android:weightSum="360"
            android:orientation="vertical">


            <EditText
                android:id="@+id/LA_name_ET"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/name"
                android:inputType="text"
                android:backgroundTint="@color/loginEditTextColor"
                android:textColor="@color/loginColor"
                android:layout_weight="44"
               />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="21"
                />

            <EditText
                android:id="@+id/LA_mail_ET"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="44"
                android:backgroundTint="@color/loginEditTextColor"
                android:inputType="textEmailAddress"
                android:textColor="@color/loginColor"
                android:hint="@string/mail"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="21"
                />

            <EditText
                android:id="@+id/LA_phone_number_ET"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="phone"
                android:textColor="@color/loginColor"
                android:backgroundTint="@color/loginEditTextColor"
                android:hint="@string/phone_number"
                android:layout_weight="44"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="19"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="22"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:text="@string/agree"/>

                 <TextView
                     android:id="@+id/LA_bylaws_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bylaws"
                     android:textSize="13sp"
                     android:layout_marginStart="4dp"
                     android:textColor="@color/appColor"/>

                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:textSize="13sp"
                     android:text="@string/and"/>

                 <TextView
                     android:id="@+id/LA_terms_TV"
                     android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:textSize="13sp"
                     android:textColor="@color/appColor"
                     android:text="@string/terms_of_use"/>



            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="46"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="40.8"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/LA_skip_btn_TV"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/skip"
                    android:textColor="@color/loginEditTextColor"
                    android:gravity="center"
                    android:fontFamily="@font/assistant_semibold"
                    android:layout_marginStart="40dp"
                    android:background="@drawable/rounded_corner"/>


                <TextView
                    android:id="@+id/LA_login_btn_TV"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginStart="13.8dp"
                    android:layout_marginEnd="40dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/rounded_corner_app_color"
                    android:text="@string/login"/>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="58.2"
                />


        </LinearLayout>




    </LinearLayout>



</LinearLayout>