<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="640"
    android:orientation="vertical"
    tools:context=".slide_screens.OnBoardingFragment1">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="110"/>

    <ImageView
        android:layout_width="237.4dp"
        android:layout_height="242.2dp"
        android:background="@drawable/onboarding3"
        android:layout_gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="46.8"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="63"
        android:text="@string/alerts_and"
        android:textSize="40sp"
        android:textColor="@color/appColor"
        android:gravity="center"
        android:fontFamily="@font/assistant_semibold"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="36"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="96"
        android:text="@string/onboarding2_text"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/boardingColor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="98"
        android:gravity="center"
        android:text="@string/onboarding22_text"
        android:textColor="@color/boardingColor"
        android:textSize="16sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

</LinearLayout>