<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wall_screen.WallFragment">

<!--    <fragment-->
<!--        android:id="@+id/map"-->
<!--        android:name="com.google.android.gms.maps.SupportMapFragment"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        tools:context="com.example.mapwithmarker.MapsMarkerActivity" />-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <RelativeLayout
            android:id="@+id/WF_start_btn_RL"
            android:layout_width="196dp"
            android:background="@drawable/circle_in_circle"
            android:layout_centerInParent="true"
            android:layout_height="196dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:text="@string/arrived"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/assistant_bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:text="@string/start"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/assistant_regular"/>


            </LinearLayout>


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/WF_stop_btn_RL"
            android:visibility="gone"
            android:layout_width="196dp"
            android:background="@drawable/circle_in_circle_red"
            android:layout_centerInParent="true"
            android:layout_height="196dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:text="@string/stop"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/assistant_bold"/>


                <Chronometer
                    android:id="@+id/WF_chronometer_timer_CM"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/assistant_regular"
                    android:layout_height="wrap_content" />




            </LinearLayout>


        </RelativeLayout>


    </RelativeLayout>



</LinearLayout>